fix footer list padding and gap

--- a/style.css
+++ b/style.css
@@ -151,12 +151,16 @@ footer img {
 .footer-content {
 	display: flex;
 	flex-direction: column;
+	gap: 3rem;
+	margin: 1rem 0 0 0;
 }
 .contact {
-	margin: 0 0 3rem;
+	margin: 0;
+	/* margin: 0 0 3rem; */
 }
 .mail {
 	list-style-image: url(./images/icon-location.svg);
+	padding-top: 0;
 }
 .phone {
 	list-style-image: url(./images/icon-phone.svg);
@@ -165,13 +169,14 @@ footer img {
 	list-style-image: url(./images/icon-email.svg);
 }
 .contact li {
-	padding: 0.7em;
+	padding: 0 0 1.5em;
 }
 .links {
 	display: flex;
 	flex-direction: column;
+	width: max-content;
 	gap: 1.5rem;
-	margin: 0 1rem 3rem;
+	margin: 0 1rem;
 }
 .links a {
 	text-decoration-line: none;
@@ -207,7 +212,6 @@ footer img {
 	font-size: 11px;
 	padding: 0 0 3rem;
 }
-
 
 @media only screen and (min-width: 800px) {
 	header {
@@ -270,9 +274,7 @@ footer img {
 		flex-direction: row;
 		justify-content: space-between;
 	}
-	.footer-content * {
-		outline: 1px solid pink;
-	}
+
 	.contact {
 		flex-grow: 3;
 	}
